[package]
name = "infraportal"
version = "0.1.0"
authors = ["slewis"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0"
serde = {version = "1.0", features = ["derive"] }
dotenv = "0.15.0"
chrono = { version = "0.4.19", features = ["serde"] }
anyhow = "1.0.37"
async-graphql = {version ="3.0.21", features = ["chrono", "dataloader", "log"]}
async-graphql-warp = "3.0.21"
futures = "0.3"
serde_derive = "1.0.123"
log = "0.4.0"
futures-timer = "3.0.2"
async-stream = "0.3.0"
slab = "0.4.2"
once_cell = "1.0"
http = "0.2"
tiberius =   { version = "0.5.12", features = ["chrono", "integrated-auth-gssapi","rust_decimal"] }
tokio-util = { version =  "0.6.6", features = ["compat"] }
tokio = { version = "1.5.0", features = ["full"] }
warp = { version = "0.3", features = ["tls"] }
rayon = "1.5"
async-trait = "0.1.50"
bb8 = "0.7.0"
reqwest = { version = "0.11", features = ["json", "stream"] }
csv = "1.1"
winping =  { version =  "0.10" }
dns-lookup = "1.0.7"
itertools = "0.10.1"
query_tiberius = { path = "../query_tiberius" }
query_tiberius_derive = { path = "../query_tiberius/query_tiberius_derive" }
qtrak = { path = "../qtrak" }
knowbe4 = { path = "../knowbe4" }
rust_decimal = "1.15.0"
thrussh = "0.33.5"
thrussh-keys = "0.21.0"
base64 = "0.13.0"
bincode = "1.3.3"
powershell_script = "0.2.1"
log4rs = { version = "1.1.1", features = ["gzip"] } 
