[package]
name = "knowbe4"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_derive = "1.0.123"
serde = {version = "1.0", features = ["derive"] }
reqwest = { version = "0.11", features = ["json"] }
anyhow = "1.0.37"
serde_json = "1.0"
tokio = { version = "1.5.0", features = ["full"] }
dotenv = "0.15.0"
csv = "1.1"
chrono = "0.4"
thirtyfour = "0.27.2"
warp = { version = "0.3", features = ["tls"] }
log = "0.4.0"