[package]
name = "qtrak"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_derive = "1.0.123"
serde = {version = "1.0", features = ["derive"] }
reqwest = { version = "0.11", features = ["json", "stream"] }
anyhow = "1.0.37"
serde_json = "1.0"
tokio = { version = "1.5.0", features = ["full"] }
dotenv = "0.15.0"
base64 = "0.13.0"
futures = "0.3"
tokio-util = { version = "0.6", features = ["codec"] }
log = "0.4.0"